--- a/assignments/cnn.ipynb
+++ b/assignments/cnn.ipynb
@@ -54,14 +54,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Working directory set to: /Users/frederikbomheuer/Desktop/2.Semester/AI_ML_25/mandatoryAssignments\n"
+      "Working directory set to: /Users/frederikbomheuer/Desktop/2.Semester/AI_ML_25/mandatoryAssignments\n",
+      "Working directory set to: /Users/frederikbomheuer/Desktop/2.Semester/AI_ML_25/mandatoryAssignments/ma1_AI_ML_25_CBS\n"
      ]
     }
    ],
@@ -69,6 +70,10 @@
     "# Ensure the working directory is set to the \"ma1\" folder.\n",
     "while Path.cwd().name != \"ma1\" and \"ma1\" in str(Path.cwd()):\n",
     "    os.chdir(\"..\")  # Move up one directory\n",
+    "print(f\"Working directory set to: {Path.cwd()}\")\n",
+    "\n",
+    "# Change into the correct directory\n",
+    "os.chdir(\"ma1_AI_ML_25_CBS\")\n",
     "print(f\"Working directory set to: {Path.cwd()}\")"
    ]
   },
@@ -90,18 +95,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'src'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[8], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# local files\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01msrc\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mutils\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m get_device\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01msrc\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mdata\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m load_torch_data, to_dataloader, train_val_split\n\u001b[1;32m      4\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01msrc\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mtraining\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m fit\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'src'"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Matplotlib is building the font cache; this may take a moment.\n"
      ]
     }
    ],
