fix: path structure

--- a/assignments/nn.ipynb
+++ b/assignments/nn.ipynb
@@ -59,6 +59,10 @@
     "# Ensure the working directory is set to the \"ma1\" folder.\n",
     "while Path.cwd().name != \"ma1\" and \"ma1\" in str(Path.cwd()):\n",
     "    os.chdir(\"..\")  # Move up one directory\n",
+    "print(f\"Working directory set to: {Path.cwd()}\")\n",
+    "\n",
+    "# Change into the correct directory\n",
+    "os.chdir(\"ma1_AI_ML_25_CBS\")\n",
     "print(f\"Working directory set to: {Path.cwd()}\")"
    ]
   },
